dotnet/k8s/template/namespace.template.yml
### PLEASE DO NOT MODIFY THIS FILE
### THIS IS A TEMPLATE ONLY
---
apiVersion: v1
kind: Namespace
metadata:
  name: __{namespace}__
---
