dotnet/k8s/template/deployment.template.yml
### PLEASE DO NOT MODIFY THIS FILE
### THIS IS A TEMPLATE ONLY
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __{namespace}__
  namespace: __{namespace}__
  labels:
    app: __{namespace}__
spec:
  replicas: __{replicas}__
  selector:
    matchLabels:
      app: __{namespace}__
  template:
    metadata:
      name: __{namespace}__
      labels:
        app: __{namespace}__
    spec:
      containers:
        - name: __{namespace}__
          image: __{image_repository}__:__{image_tag}__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: __{target_port}__
      restartPolicy: Always
